<resources>
    <string name="app_name">Selene</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    //Custom Strings
    <string name="add_new">Add New</string>
    <string name="please_enter_an_emotional_feeling">Please enter an emotional feeling...</string>
    <string name="please_enter_a_physical_feeling">Please enter a physical feeling...</string>
    <string name="save">Save</string>
    <string name="type_here">Type here</string>
    <string name="select_date">Select Date</string>
    <string name="date">Date</string>
    <string name="bleeding">Bleeding?</string>
    <string name="emotional_feeling">Emotional Feeling?</string>
    <string name="physical_feeling">Physical Feeling?</string>
    <string name="title_activity_add_new_daily_input"></string>
    <string name="back">Back</string>
    <string name="note">Note?</string>
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="show_bleeding">Show Bleeding</string>
    <string name="search">Search</string>
    <string name="add_note">Add Note...</string>
    <string name="please_select_a_date">Please select a date...</string>
    <string name="pick_date">You must pick a date!</string>
    <string name="saved">Saved!</string>


    // Array of emotions values
    <string-array name="emotions_array">
        <item>Happy</item>
        <item>Content</item>
        <item>At Peace</item>
        <item>Excited</item>
        <item>Full</item>
        <item>Joyful</item>
        <item>Restless</item>
        <item>Scattered</item>
        <item>Grounded</item>
        <item>Sad</item>
        <item>Frustrated</item>
        <item>Anxious</item>
        <item>Resilient</item>
        <item>Disappointed</item>
        <item>Confused</item>
        <item>Apathetic</item>
        <item>Doubtful</item>
        <item>Empty</item>
        <item>Resentful</item>
        <item>Worried</item>
        <item>None</item>

    </string-array>

    //array of physical feelings values
    <string-array name="physical_feelings_array">
        <item>Headache</item>
        <item>Low Energy</item>
        <item>High Energy</item>
        <item>Trouble Sleeping</item>
        <item>Groggy</item>
        <item>Backache</item>
        <item>Cramps</item>
        <item>Nausea</item>
        <item>Digestive Upsets</item>
        <item>Breast Tenderness</item>
        <item>Tension</item>
        <item>Tired</item>
        <item>None</item>

    </string-array>

</resources>
