<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/item_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/item_bleeding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/bleeding"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/item_emotion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/emotional_feeling"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/item_physical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/physical_feeling"
        android:textColor="@color/black" />

</LinearLayout>