<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/daily_input_activity_linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyInputActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/dateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:hint="Please select a date..." />

            <Button
                android:id="@+id/btn_selectDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/select_date" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_bleeding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bleeding" />


        <TextView
            android:id="@+id/enterEmotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_an_emotional_feeling" />

        <Spinner
            android:id="@+id/emotion_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="match_parent"
            android:entries="@array/emotions_array"
            android:spinnerMode="dialog" />


        <TextView
            android:id="@+id/enterPhysical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_a_physical_feeling" />


        <Spinner
            android:id="@+id/physical_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="match_parent"
            android:entries="@array/physical_feelings_array"
            android:spinnerMode="dialog" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <EditText
                android:id="@+id/enterNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:ems="10"
                android:hint="Add Note..."
                android:inputType="textMultiLine" />

            <ImageButton
                android:id="@+id/btn_finishNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                app:srcCompat="@drawable/ic_round_done_24px" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit" />
        </FrameLayout>


        <TextView
            android:id="@+id/testOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


